src/components/search-box/search-box.styles.css
.search {
    -webkit-appearance: none;
    border: none;
    border-radius: 10px;
    outline: none;
    margin-bottom: 30px;
    padding: 10px;
    width: 300px;
    background-color: rgba(255,255,255, 0.2);
    line-height: 30px;
    text-align: center;
    font-size: 1.5rem;
}

.search::placeholder {
    color: rgba(0,0,0,0.6);
    transition: color 0.25s ease-out;
}

.search:hover::placeholder {
    color: rgba(0,0,0,0);
    transition: color 0.25s ease-out;
}

